--- a/SiteAcademia/Agendamento/Agendamento.html
+++ b/SiteAcademia/Agendamento/Agendamento.html
@@ -3,65 +3,90 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calendário com Seleção</title>
+  <title>Agendamento | TechFit</title>
   <link rel="stylesheet" href="agendamento.css">
 </head>
 <body>
 
-<header>  
-  <a  href="../Index/index.html" class="logo">
-      <img src="../IMG/Logo.png" alt="Logo techFit" width="100" height="100" loading="lazy">
-    </a>
+  <header>
+    <div class="logo">
+      <img src="../IMG/Logo.png" alt="Logo techFit">
+    </div>
 
+    <nav class="nav-buttons">
+      <a href="../Index/index.html">Academia</a>
+      <a href="../Agendamento/Agendamento.html">Agendamento</a>
+      <a href="../Unidades/Unidades.html">Unidades</a>
+    </nav>
 
-  <div class="nav-buttons">
+    <div class="menu-icon" id="menu-icon">☰</div>
+  </header>
+
+  <!-- Menu lateral -->
+  <div class="side-menu" id="side-menu">
     <a href="../Index/index.html">Academia</a>
     <a href="../Agendamento/Agendamento.html">Agendamento</a>
     <a href="../Unidades/Unidades.html">Unidades</a>
+    <a href="#">Seja um Franqueado</a>
+    <a href="#">Tech Fit News</a>
+    <a href="#">Sustentabilidade</a>
+    <a href="#">Nossa História</a>
   </div>
 
-  <div class="menu-icon">☰</div>
-</header>
-
-<div class="calendar">
-  <div class="calendar-header">
-    <button class="prev-month">&lt;</button>
-    <h2></h2>
-    <button class="next-month">&gt;</button>
-  </div>
-  <div class="calendar-days"></div>
-</div>
-
-<div class="selection-container" style="display:flex; flex-direction: column; width: 200px; margin: 20px auto; gap: 15px;">
-  <div>
-    <label for="time-select">Selecione o horário:</label>
-    <select id="time-select" style="width: 100%; padding: 6px; border-radius: 10px; border:1px solid #ccc;">
-      <option value="">Escolha</option>
-      <option value="06:00">06:00</option>
-      <option value="08:00">08:00</option>
-      <option value="10:00">09:00</option>
-      <option value="12:00">11:00</option>
-      <option value="14:00">12:30</option>
-      <option value="14:00">13:30</option>
-      <option value="16:00">14:30</option>
-      <option value="18:00">15:30</option>
-      <option value="14:00">16:30</option>
-      <option value="14:00">17:30</option>
-    </select>
+  <!-- Calendário -->
+  <div class="calendar">
+    <div class="calendar-header">
+      <button class="prev-month">&lt;</button>
+      <h2></h2>
+      <button class="next-month">&gt;</button>
+    </div>
+    <div class="calendar-days"></div>
   </div>
 
-  <div>
-    <label for="goal-select">Selecione o objetivo:</label>
-    <select id="goal-select" style="width: 100%; padding: 6px; border-radius: 10px; border:1px solid #ccc;">
-      <option value="">Escolha</option>
-      <option value="Perda_peso">Perda de peso</option>
-      <option value="Ganho_massa">Ganho de massa</option>
-      <option value="Estética">Hipertrofia</option>
-      <option value="Saúde">Saúde</option>
-    </select>
-  </div>
-</div>
+  <!-- Seleções -->
+  <div class="selection-container">
+    <div>
+      <label for="time-select">Selecione o horário:</label>
+      <select id="time-select">
+        <option value="">Escolha</option>
+        <option value="06:00">06:00</option>
+        <option value="08:00">08:00</option>
+        <option value="09:00">09:00</option>
+        <option value="11:00">11:00</option>
+        <option value="12:30">12:30</option>
+        <option value="13:30">13:30</option>
+        <option value="14:30">14:30</option>
+        <option value="15:30">15:30</option>
+        <option value="16:30">16:30</option>
+        <option value="17:30">17:30</option>
+      </select>
+    </div>
 
-<script src="agendamento.js"></script>
+    <div>
+      <label for="goal-select">Selecione o objetivo:</label>
+      <select id="goal-select">
+        <option value="">Escolha</option>
+        <option value="Perda_peso">Perda de peso</option>
+        <option value="Ganho_massa">Ganho de massa</option>
+        <option value="Estética">Hipertrofia</option>
+        <option value="Saúde">Saúde</option>
+      </select>
+    </div>
+
+    <!-- Botão de agendamento -->
+    <button id="agendar-btn">Agendar</button>
+  </div>
+
+  <script src="agendamento.js"></script>
+
+  <script>
+    const menuIcon = document.getElementById('menu-icon');
+    const sideMenu = document.getElementById('side-menu');
+
+    menuIcon.addEventListener('click', () => {
+      sideMenu.classList.toggle('active');
+    });
+  </script>
+
 </body>
 </html>
