--- a/SiteAcademia/Index/index.html
+++ b/SiteAcademia/Index/index.html
@@ -127,7 +127,7 @@
     <a href="#">Seja um Franqueado</a>
     <a href="#">Tech Fit News</a>
     <a href="#">Sustentabilidade</a>
-    <a href="#">Nossa História</a>
+    <a href="/SiteAcademia/Nossa História/nos.html">Nossa História</a>
   </div>
 
   <section class="banner-container">
