--- a/SiteAcademia/Nossa História/nos.html
+++ b/SiteAcademia/Nossa História/nos.html
@@ -9,27 +9,35 @@
 <body>
   <header>
     <div class="logo">
-      <img src="../IMG/Logo.png" alt="Logo"> 
+      <img src="/SiteAcademia/IMG/Logo.png" alt="Logo TechFit">
     </div>
 
-    <nav class="nav-buttons">
-      <a href="/SiteAcademia/Index/index.html">Início</a>
-      <a href="/SiteAcademia/Unidades/Unidades.html">Unidades</a>
+    <!-- 🧭 Navegação principal atualizada -->
+    <nav class="nav-buttons" id="nav-buttons">
+      <a href="/SiteAcademia/Index e Login/index.html">Início</a>
       <a href="/SiteAcademia/Agendamento/Agendamento.html">Agendamento</a>
-      <a href="nos.html">Nossa História</a>
-      <a href="#" class="logout">Login</a>
+      <a href="/SiteAcademia/Unidades/Unidades.html">Unidades</a>
+      <a href="/SiteAcademia/Chat/chat.html">Chat</a>
+      <a href="/SiteAcademia/Admin/painel.html">Painel Admin</a>
+      <a href="/SiteAcademia/Nossa História/nos.html">Sobre Nós</a>
+      <a href="/SiteAcademia/Usuario/usuario.html" id="perfil-btn" style="display:none;">Perfil</a>
+      <a href="/SiteAcademia/Index e Login/login.html" id="login-btn">Login</a>
     </nav>
 
     <div class="menu-icon" id="menu-icon">☰</div>
   </header>
 
+  <!-- 🪟 Menu lateral -->
   <div class="side-menu" id="side-menu">
-    <a href="index.html">Início</a>
-    <a href="#">Unidades</a>
-    <a href="#">Agendamento</a>
-    <a href="nossa-historia.html">Nossa História</a>
-    <hr>
-    <a href="admin.html" class="logout">Login</a>
+    <div class="close-btn" id="close-btn">✖</div>
+    <a href="/SiteAcademia/Index e Login/index.html">Início</a>
+    <a href="/SiteAcademia/Agendamento/Agendamento.html">Agendamento</a>
+    <a href="/SiteAcademia/Unidades/Unidades.html">Unidades</a>
+    <a href="/SiteAcademia/Chat/chat.html">Chat</a>
+    <a href="/SiteAcademia/Admin/painel.html">Painel Admin</a>
+    <a href="/SiteAcademia/Nossa História/nos.html">Sobre Nós</a>
+    <a href="/SiteAcademia/Usuario/usuario.html" id="perfil-side" style="display:none;">Perfil</a>
+    <a href="/SiteAcademia/Index e Login/login.html" id="login-side">Login</a>
   </div>
 
   <main class="history-container">
