--- a/SiteAcademia/Usuario/usuario.html
+++ b/SiteAcademia/Usuario/usuario.html
@@ -3,75 +3,51 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Meu Perfil - techFit</title>
+  <title>Meu Perfil | TechFit</title>
   <link rel="stylesheet" href="usuario.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  
   <header>
     <div class="logo">
-      <img src="../IMG/Logo.png" alt="Logo"> 
+      <img src="../IMG/Logo.png" alt="Logo TechFit">
     </div>
 
     <nav class="nav-buttons">
-      <a href="index.html">Academia</a>
       <a href="../Agendamento/agendamento.html">Agendamento</a>
       <a href="../Unidades/Unidades.html">Unidades</a>
+      <a href="/SiteAcademia/Nossa História/nos.html">Sobre Nós</a>
+      <a href="#" id="logout">Logout</a>
     </nav>
-
-    <div class="menu-icon" id="menu-icon">☰</div>
   </header>
 
-  <div class="side-menu" id="side-menu">
-    <a href="index.html">Academia</a>
-    <a href="../Agendamento/agendamento.html">Agendamento</a>
-    <a href="../Unidades/Unidades.html">Unidades</a>
-    <a href="#">Seja um Franqueado</a>
-    <a href="#">Tech Fit News</a>
-    <a href="#">Sustentabilidade</a>
-    <a href="/SiteAcademia/Nossa História/nos.html">Nossa História</a>
-    <a href="perfil.html" style="background-color: #ff4c4c;">Meu Perfil</a>
-    <a href="#">Sair</a>
-  </div>
-
-  <main class="profile-container">
+  <main class="profile-container fade-in-up">
     <div class="profile-card">
-      
-      <img src="../IMG/avatar-placeholder.png" alt="Foto do Aluno" class="profile-pic"> 
-      <h2>Ana Júlia da Silva</h2>
+      <img src="../IMG/avatar-placeholder.png" alt="Foto do Usuário" class="profile-pic">
+      <h2 id="nome-usuario">Usuário</h2>
       <h3 class="plano-ativo">Plano Black</h3>
-      
+
       <div class="profile-info">
-        <div class="info-row">
-          <strong>Matrícula:</strong>
-          <span>123456789</span>
-        </div>
-        <div class="info-row">
-          <strong>Email:</strong>
-          <span>ana.julia@email.com</span>
-        </div>
-        <div class="info-row">
-          <strong>Telefone:</strong>
-          <span>(11) 98765-4321</span>
-        </div>
-        <div class="info-row">
-          <strong>Unidade Principal:</strong>
-          <span>Tech Fit - Paulista</span>
-        </div>
-        <div class="info-row">
-          <strong>Próximo Pagamento:</strong>
-          <span>10/11/2025</span>
-        </div>
+        <div class="info-row"><strong>Matrícula:</strong> <span>#000123</span></div>
+        <div class="info-row"><strong>Email:</strong> <span id="email">user@techfit.com</span></div>
+        <div class="info-row"><strong>Telefone:</strong> <span>(11) 99999-9999</span></div>
+        <div class="info-row"><strong>Unidade:</strong> <span>TechFit Paulista</span></div>
+        <div class="info-row"><strong>Próximo Pagamento:</strong> <span>10/11/2025</span></div>
       </div>
 
       <div class="profile-actions">
         <a href="#" class="btn">Editar Perfil</a>
-        <a href="#" class="btn">Meus Agendamentos</a>
+        <a href="../Agendamento/agendamento.html" class="btn">Agendamentos</a>
         <a href="#" class="btn">Alterar Senha</a>
+        <a href="/SiteAcademia/Index e Login/index.html" class="btn voltar">Voltar ao Início</a>
       </div>
-
     </div>
   </main>
-<script src="usuario.js"></script>
+
+  <footer>
+    <p>© 2025 TechFit — Todos os direitos reservados</p>
+  </footer>
+
+  <script src="usuario.js"></script>
 </body>
 </html>
