--- a/SiteAcademia/Index/index.html
+++ b/SiteAcademia/Index/index.html
@@ -121,13 +121,13 @@
 
   <!-- Menu lateral -->
   <div class="side-menu" id="side-menu">
-    <a href="index.html">Academia</a>
-    <a href="../Agendamento/agendamento.html">Agendamento</a>
+    <a href="../Index/index.html">Academia</a>
+    <a href="../Agendamento/Agendamento.html">Agendamento</a>
     <a href="../Unidades/Unidades.html">Unidades</a>
     <a href="#">Seja um Franqueado</a>
     <a href="#">Tech Fit News</a>
     <a href="#">Sustentabilidade</a>
-    <a href="/SiteAcademia/Nossa História/nos.html">Nossa História</a>
+    <a href="#">Nossa História</a>
   </div>
 
   <section class="banner-container">
