--- a/SiteAcademia/Usuario/usuario.html
+++ b/SiteAcademia/Usuario/usuario.html
@@ -14,7 +14,7 @@
     </div>
 
     <nav class="nav-buttons">
-      <a href="index.html">Academia</a>
+      <a href="../Index/index.html">Academia</a>
       <a href="../Agendamento/agendamento.html">Agendamento</a>
       <a href="../Unidades/Unidades.html">Unidades</a>
     </nav>
