--- a/SiteAcademia/Index e Login/index.html
+++ b/SiteAcademia/Index e Login/index.html
@@ -15,38 +15,34 @@
       <img src="/SiteAcademia/IMG/Logo.png" alt="Logo TechFit">
     </div>
 
-    <!-- 🧭 Navegação principal atualizada -->
     <nav class="nav-buttons" id="nav-buttons">
-      <a href="Agendamento/agendamento.html">Agendamento</a>
-      <a href="Unidades/Unidades.html">Unidades</a>
+      <a href="/SiteAcademia/Agendamento/Agendamento.html">Agendamento</a>
+      <a href="/SiteAcademia/Unidades/unidades.html">Unidades</a>
       <a href="/SiteAcademia/Chat/chat.html">Chat</a>
       <a href="/SiteAcademia/Admin/painel.html">Painel Admin</a>
-      <a href="Nossa História/nos.html">Sobre Nós</a>
-      <a href="Usuario/usuario.html" id="perfil-btn" style="display:none;">Perfil</a>
-      <a href="login.html" id="login-btn">Login</a>
+      <a href="/SiteAcademia/Nossa História/nos.html">Sobre Nós</a>
+      <a href="/SiteAcademia/Usuario/usuario.html" id="perfil-btn" style="display:none;">Perfil</a>
+      <a href="/SiteAcademia/Index e Login/login.html" id="login-btn">Login</a>
     </nav>
 
     <div class="menu-icon" id="menu-icon">☰</div>
   </header>
 
-  <!-- 🪟 Menu lateral -->
   <div class="side-menu" id="side-menu">
     <div class="close-btn" id="close-btn">✖</div>
-    <a href="Agendamento/agendamento.html">Agendamento</a>
-    <a href="Unidades/Unidades.html">Unidades</a>
+    <a href="/SiteAcademia/Agendamento/Agendamento.html">Agendamento</a>
+    <a href="/SiteAcademia/Unidades/unidades.html">Unidades</a>
     <a href="/SiteAcademia/Chat/chat.html">Chat</a>
     <a href="/SiteAcademia/Admin/painel.html">Painel Admin</a>
-    <a href="Nossa História/nos.html">Sobre Nós</a>
-    <a href="Usuario/usuario.html" id="perfil-side" style="display:none;">Perfil</a>
-    <a href="login.html" id="login-side">Login</a>
+    <a href="/SiteAcademia/Nossa História/nos.html">Sobre Nós</a>
+    <a href="/SiteAcademia/Usuario/usuario.html" id="perfil-side" style="display:none;">Perfil</a>
+    <a href="/SiteAcademia/Index e Login/login.html" id="login-side">Login</a>
   </div>
 
-  <!-- 🖼️ Banner -->
   <section class="banner-container fade-in-up">
     <img src="/SiteAcademia/IMG/banner.png" alt="Oferta exclusiva TechFit" class="banner-img">
   </section>
 
-  <!-- 💪 Planos -->
   <section class="planos">
     <div class="card fade-in-up">
       <h2>Plano Black</h2>
