--- a/SiteAcademia/Admin/painel.html
+++ b/SiteAcademia/Admin/painel.html
@@ -73,9 +73,9 @@
     </div>
   </div>
 
-  <footer>
-    <p>© 2025 TechFit — Gestão integrada e segura</p>
-  </footer>
+<footer>
+  <p>© 2025 TechFit — Todos os direitos reservados</p>
+</footer>
 
   <script src="painel.js"></script>
 </body>
