--- a/SiteAcademia/Index e Login/index.html
+++ b/SiteAcademia/Index e Login/index.html
@@ -22,7 +22,7 @@
       <a href="/SiteAcademia/Admin/painel.html">Painel Admin</a>
       <a href="/SiteAcademia/Nossa História/nos.html">Sobre Nós</a>
       <a href="/SiteAcademia/Usuario/usuario.html" id="perfil-btn" style="display:none;">Perfil</a>
-      <a href="/SiteAcademia/Index e Login/login.html" id="login-btn">Login</a>
+      <a href="/SiteAcademia/Index e Login/login.php" id="login-btn">Login</a>
     </nav>
 
     <div class="menu-icon" id="menu-icon">☰</div>
