--- a/SiteAcademia/Unidades/Unidades.html
+++ b/SiteAcademia/Unidades/Unidades.html
@@ -7,22 +7,47 @@
   <link rel="stylesheet" href="unidades.css">
 </head>
 <body>
-  <header>
-    <!-- Logo -->
-    <a href="../Index/index.html" class="logo">
-      <img src="../IMG/Logo.png" alt="Logo techFit" width="100" height="100" loading="lazy">
-    </a>
+  <div class="overlay" id="overlay"></div>
 
-    <!-- Botões -->
-    <div class="nav-buttons">
-    <a href="../Index/index.html">Academia</a>
-    <a href="../Agendamento/Agendamento.html">Agendamento</a>
-    <a href="../Unidades/Unidades.html">Unidades</a>
+<header>
+  <div class="logo">
+    <img src="/SiteAcademia/IMG/Logo.png" alt="Logo TechFit">
   </div>
 
-    <!-- Ícone de menu -->
-    <div class="menu-icon">☰</div>
-  </header>
+  <nav class="nav-buttons" id="nav-buttons">
+    <a href="/SiteAcademia/Agendamento/Agendamento.html">Agendamento</a>
+    <a href="/SiteAcademia/Unidades/unidades.html">Unidades</a>
+    <a href="/SiteAcademia/Chat/chat.html">Chat</a>
+    <a href="/SiteAcademia/Admin/painel.html">Painel Admin</a>
+    <a href="/SiteAcademia/Nossa História/nos.html">Sobre Nós</a>
+    <a href="/SiteAcademia/Usuario/usuario.html" id="perfil-btn" style="display:none;">Perfil</a>
+    <a href="/SiteAcademia/Index e Login/login.html" id="login-btn">Login</a>
+  </nav>
+
+  <div class="menu-icon" id="menu-icon">☰</div>
+</header>
+
+<div class="side-menu" id="side-menu">
+  <div class="close-btn" id="close-btn">✖</div>
+  <a href="/SiteAcademia/Agendamento/Agendamento.html">Agendamento</a>
+  <a href="/SiteAcademia/Unidades/unidades.html">Unidades</a>
+  <a href="/SiteAcademia/Chat/chat.html">Chat</a>
+  <a href="/SiteAcademia/Admin/painel.html">Painel Admin</a>
+  <a href="/SiteAcademia/Nossa História/nos.html">Sobre Nós</a>
+  <a href="/SiteAcademia/Usuario/usuario.html" id="perfil-side" style="display:none;">Perfil</a>
+  <a href="/SiteAcademia/Index e Login/login.html" id="login-side">Login</a>
+</div>
+
+<div class="side-menu" id="side-menu">
+    <div class="close-btn" id="close-btn">✖</div>
+    <a href="/SiteAcademia/Agendamento/Agendamento.html">Agendamento</a>
+    <a href="/SiteAcademia/Unidades/unidades.html">Unidades</a>
+    <a href="/SiteAcademia/Chat/chat.html">Chat</a>
+    <a href="/SiteAcademia/Admin/painel.html">Painel Admin</a>
+    <a href="/SiteAcademia/Nossa História/nos.html">Sobre Nós</a>
+    <a href="/SiteAcademia/Usuario/usuario.html" id="perfil-side" style="display:none;">Perfil</a>
+    <a href="/SiteAcademia/Index e Login/login.html" id="login-side">Login</a>
+  </div>
 
   <!-- Conteúdo das Unidades -->
   <div class="unidades-container">
