--- a/SiteAcademia/Admin/admin.html
+++ b/SiteAcademia/Admin/admin.html
@@ -26,7 +26,7 @@
     <a href="#">Dashboard</a>
     <a href="#">Alunos</a>
     <a href="#">Financeiro</a>
-    <a href="../Index/index.html">Ver Site</a>
+    <a href="../index.html">Ver Site</a>
     <hr>
     <a href="index.html" class="logout">Sair</a>
   </div>
