--- a/SiteAcademia/Nossa História/nos.html
+++ b/SiteAcademia/Nossa História/nos.html
@@ -14,14 +14,14 @@
 
     <!-- 🧭 Navegação principal atualizada -->
     <nav class="nav-buttons" id="nav-buttons">
-      <a href="/SiteAcademia/Index e Login/index.html">Início</a>
+      <a href="../index.html">Início</a>
       <a href="/SiteAcademia/Agendamento/Agendamento.html">Agendamento</a>
       <a href="/SiteAcademia/Unidades/Unidades.html">Unidades</a>
       <a href="/SiteAcademia/Chat/chat.html">Chat</a>
       <a href="/SiteAcademia/Admin/painel.html">Painel Admin</a>
       <a href="/SiteAcademia/Nossa História/nos.html">Sobre Nós</a>
-      <a href="/SiteAcademia/Usuario/usuario.html" id="perfil-btn" style="display:none;">Perfil</a>
-      <a href="/SiteAcademia/Index e Login/login.html" id="login-btn">Login</a>
+      <a href="/SiteAcademia/Usuario/usuario.php" id="perfil-btn" style="display:none;">Perfil</a>
+      <a href="/SiteAcademia/Login/login.php" id="login-btn">Login</a>
     </nav>
 
     <div class="menu-icon" id="menu-icon">☰</div>
@@ -30,14 +30,14 @@
   <!-- 🪟 Menu lateral -->
   <div class="side-menu" id="side-menu">
     <div class="close-btn" id="close-btn">✖</div>
-    <a href="/SiteAcademia/Index e Login/index.html">Início</a>
+    <a href="../index.html">Início</a>
     <a href="/SiteAcademia/Agendamento/Agendamento.html">Agendamento</a>
     <a href="/SiteAcademia/Unidades/Unidades.html">Unidades</a>
     <a href="/SiteAcademia/Chat/chat.html">Chat</a>
     <a href="/SiteAcademia/Admin/painel.html">Painel Admin</a>
     <a href="/SiteAcademia/Nossa História/nos.html">Sobre Nós</a>
-    <a href="/SiteAcademia/Usuario/usuario.html" id="perfil-side" style="display:none;">Perfil</a>
-    <a href="/SiteAcademia/Index e Login/login.html" id="login-side">Login</a>
+    <a href="/SiteAcademia/Usuario/usuario.php" id="perfil-side" style="display:none;">Perfil</a>
+    <a href="/SiteAcademia/Login/login.php" id="login-side">Login</a>
   </div>
 
   <main class="history-container">
