--- a/SiteAcademia/Unidades/Unidades.html
+++ b/SiteAcademia/Unidades/Unidades.html
@@ -9,13 +9,13 @@
 <body>
   <header>
     <!-- Logo -->
-    <a href="../Index/index.html" class="logo">
+    <a href="../index.html" class="logo">
       <img src="../IMG/Logo.png" alt="Logo techFit" width="100" height="100" loading="lazy">
     </a>
 
     <!-- Botões -->
     <div class="nav-buttons">
-    <a href="../Index/index.html">Academia</a>
+    <a href="../index.html">Academia</a>
     <a href="../Agendamento/Agendamento.html">Agendamento</a>
     <a href="../Unidades/Unidades.html">Unidades</a>
   </div>
