--- a/SiteAcademia/index.html
+++ b/SiteAcademia/index.html
@@ -12,17 +12,17 @@
 
   <header>
     <div class="logo">
-      <img src="/SiteAcademia/IMG/Logo.png" alt="Logo TechFit">
+      <img src="/IMG/Logo.png" alt="Logo TechFit">
     </div>
 
-    <nav class="nav-buttons" id="nav-buttons">
-      <a href="/SiteAcademia/Agendamento/Agendamento.html">Agendamento</a>
-      <a href="/SiteAcademia/Unidades/unidades.html">Unidades</a>
-      <a href="/SiteAcademia/Chat/chat.html">Chat</a>
-      <a href="/SiteAcademia/Admin/painel.html">Painel Admin</a>
-      <a href="/SiteAcademia/Nossa História/nos.html">Sobre Nós</a>
-      <a href="/SiteAcademia/Usuario/usuario.html" id="perfil-btn" style="display:none;">Perfil</a>
-      <a href="/SiteAcademia/Index e Login/login.html" id="login-btn">Login</a>
+    <nav class="nav-buttons" id="nav-buttons">  
+      <a href="/Agendamento/Agendamento.html">Agendamento</a>
+      <a href="/Unidades/Unidades.html">Unidades</a>
+      <a href="/Chat/chat.html">Chat</a>
+      <a href="/Admin/painel.html">Painel Admin</a>
+      <a href="/Nossa História/nos.html">Sobre Nós</a>
+      <a href="/Usuario/usuario.php" id="perfil-btn" style="display:none;">Perfil</a>
+      <a href="/Login/login.php" id="login-btn">Login</a>
     </nav>
 
     <div class="menu-icon" id="menu-icon">☰</div>
@@ -30,17 +30,17 @@
 
   <div class="side-menu" id="side-menu">
     <div class="close-btn" id="close-btn">✖</div>
-    <a href="/SiteAcademia/Agendamento/Agendamento.html">Agendamento</a>
-    <a href="/SiteAcademia/Unidades/unidades.html">Unidades</a>
-    <a href="/SiteAcademia/Chat/chat.html">Chat</a>
-    <a href="/SiteAcademia/Admin/painel.html">Painel Admin</a>
-    <a href="/SiteAcademia/Nossa História/nos.html">Sobre Nós</a>
-    <a href="/SiteAcademia/Usuario/usuario.html" id="perfil-side" style="display:none;">Perfil</a>
-    <a href="/SiteAcademia/Index e Login/login.php" id="login-side">Login</a>
+    <a href="/Agendamento/Agendamento.html">Agendamento</a>
+      <a href="/Unidades/Unidades.html">Unidades</a>
+      <a href="/Chat/chat.html">Chat</a>
+      <a href="/Admin/painel.html">Painel Admin</a>
+      <a href="/Nossa História/nos.html">Sobre Nós</a>
+      <a href="/Usuario/usuario.php" id="perfil-btn" style="display:none;">Perfil</a>
+      <a href="/Login/login.php" id="login-btn">Login</a>
   </div>
 
   <section class="banner-container fade-in-up">
-    <img src="/SiteAcademia/IMG/banner.png" alt="Oferta exclusiva TechFit" class="banner-img">
+    <img src="/IMG/banner.png" alt="Oferta exclusiva TechFit" class="banner-img">
   </section>
 
   <section class="planos">
@@ -48,7 +48,7 @@
       <h2>Plano Black</h2>
       <p>Treine em qualquer unidade TechFit do Brasil e América Latina.</p>
       <p class="preco">A partir de <strong>R$ 149,90</strong></p>
-      <a href="../PAGAMENTOS/pagamentos.html" class="btn brilho">Contratar agora</a>
+      <a href="/PAGAMENTOS/pagamentos.php" class="btn brilho">Contratar agora</a>
       <ul>
         <li>✔ Acesso total</li>
         <li>✔ Leve 5 amigos/mês</li>
@@ -61,7 +61,7 @@
       <h2>Plano Fit</h2>
       <p>Plano econômico com acesso livre à sua unidade preferida.</p>
       <p class="preco">A partir de <strong>R$ 99,90</strong></p>
-      <a href="../PAGAMENTOS/pagamentos.html" class="btn brilho">Contratar agora</a>
+      <a href="/PAGAMENTOS/pagamentos.php" class="btn brilho">Contratar agora</a>
       <ul>
         <li>✔ Acesso à unidade</li>
         <li>✘ Levar amigos</li>
@@ -74,7 +74,7 @@
       <h2>Plano Tech</h2>
       <p>Treine com conforto e liberdade, ideal para rotina dinâmica.</p>
       <p class="preco">A partir de <strong>R$ 119,90</strong></p>
-      <a href="../PAGAMENTOS/pagamentos.html" class="btn brilho">Contratar agora</a>
+      <a href="/PAGAMENTOS/pagamentos.php" class="btn brilho">Contratar agora</a>
       <ul>
         <li>✔ Acesso a todas as academias</li>
         <li>✘ Levar amigos</li>
