--- a/SiteAcademia/Admin/painel.html
+++ b/SiteAcademia/Admin/painel.html
@@ -73,7 +73,7 @@
     </div>
   </div>
 
-<footer>
+<footer class="fade-in-up">
   <p>© 2025 TechFit — Todos os direitos reservados</p>
 </footer>
 
