--- a/SiteAcademia/Agendamento/Agendamento.html
+++ b/SiteAcademia/Agendamento/Agendamento.html
@@ -82,6 +82,10 @@
     <button id="agendar-btn">Agendar</button>
   </div>
 
+  <footer class="fade-in-up">
+  <p>© 2025 TechFit — Todos os direitos reservados</p>
+</footer>
+
   <script src="agendamento.js"></script>
 </body>
 </html>
