--- a/SiteAcademia/Nossa História/nos.html
+++ b/SiteAcademia/Nossa História/nos.html
@@ -60,6 +60,10 @@
     </p>
   </main>
 
+  <footer class="fade-in-up">
+    <p>© 2025 TechFit — Todos os direitos reservados</p>
+  </footer>
+
 <script src="nos.js"></script>
 </body>
 </html>
