--- a/SiteAcademia/Agendamento/Agendamento.html
+++ b/SiteAcademia/Agendamento/Agendamento.html
@@ -10,18 +10,18 @@
 
   <header>
     <div class="logo">
-      <img src="/SiteAcademia/IMG/Logo.png" alt="Logo TechFit">
+      <img src="../IMG/Logo.png" alt="Logo TechFit">
     </div>
 
     <nav class="nav-buttons" id="nav-buttons">
-      <a href="../index.html">Início</a>
-      <a href="/SiteAcademia/Agendamento/agendamento.html">Agendamento</a>
-      <a href="/SiteAcademia/Unidades/Unidades.html">Unidades</a>
-      <a href="/SiteAcademia/Chat/chat.html">Chat</a>
-      <a href="/SiteAcademia/Admin/painel.html">Painel Admin</a>
-      <a href="/SiteAcademia/Nossa História/nos.html">Sobre Nós</a>
-      <a href="/SiteAcademia/Usuario/usuario.php" id="perfil-btn" style="display:none;">Perfil</a>
-      <a href="/SiteAcademia/Login/login.php" id="login-btn">Login</a>
+      <a href="/index.html">Início</a>
+      <a href="/Agendamento/Agendamento.html">Agendamento</a>
+      <a href="/Unidades/Unidades.html">Unidades</a>
+      <a href="/Chat/chat.html">Chat</a>
+      <a href="/Admin/painel.php">Painel Admin</a>
+      <a href="/Nossa História/nos.html">Sobre Nós</a>
+        <a href="/Alunos/usuario.php" id="perfil-btn" style="display:none;">Perfil</a>
+        <a href="/Login/login.php" id="login-btn">Login</a>
     </nav>
 
     <div class="menu-icon" id="menu-icon">☰</div>
@@ -29,14 +29,14 @@
 
   <div class="side-menu" id="side-menu">
     <div class="close-btn" id="close-btn">✖</div>
-    <a href="../index.html">Início</a>
-    <a href="/SiteAcademia/Agendamento/agendamento.html">Agendamento</a>
-    <a href="/SiteAcademia/Unidades/Unidades.html">Unidades</a>
-    <a href="/SiteAcademia/Chat/chat.html">Chat</a>
-    <a href="/SiteAcademia/Admin/painel.html">Painel Admin</a>
-    <a href="/SiteAcademia/Nossa História/nos.html">Sobre Nós</a>
-    <a href="/SiteAcademia/Usuario/usuario.php" id="perfil-side" style="display:none;">Perfil</a>
-    <a href="/SiteAcademia/Login/login.php" id="login-side">Login</a>
+    <a href="/index.html">Início</a>
+    <a href="/Agendamento/agendamento.html">Agendamento</a>
+    <a href="/Unidades/Unidades.html">Unidades</a>
+    <a href="/Chat/chat.html">Chat</a>
+    <a href="/Admin/painel.php">Painel Admin</a>
+    <a href="/Nossa História/nos.html">Sobre Nós</a>
+      <a href="/Alunos/usuario.php" id="perfil-side" style="display:none;">Perfil</a>
+      <a href="/Login/login.php" id="login-side">Login</a>
   </div>
 
   <div class="overlay" id="overlay"></div>
@@ -72,10 +72,22 @@
       <label for="goal-select">Selecione o objetivo:</label>
       <select id="goal-select">
         <option value="">Escolha</option>
-        <option value="Perda_peso">Perda de peso</option>
-        <option value="Ganho_massa">Ganho de massa</option>
-        <option value="Estética">Hipertrofia</option>
+        <option value="Perda de peso">Perda de peso</option>
+        <option value="Ganho de Massa">Ganho de Massa</option>
+        <option value="Hipertrofia">Hipertrofia</option>
         <option value="Saúde">Saúde</option>
+      </select>
+    </div>
+
+    <div>
+      <label for="modalidade-select">Selecione a modalidade:</label>
+      <select id="modalidade-select" name="modalidade">
+        <option value="">Escolha</option>
+        <option value="Musculação">Musculação</option>
+        <option value="Spinning">Spinning</option>
+        <option value="Yoga">Yoga</option>
+        <option value="Funcional">Funcional</option>
+        <option value="Pilates">Pilates</option>
       </select>
     </div>
 
