--- a/SiteAcademia/Chat/chat.html
+++ b/SiteAcademia/Chat/chat.html
@@ -12,18 +12,18 @@
 
   <header>
     <div class="logo">
-      <img src="/SiteAcademia/IMG/Logo.png" alt="Logo TechFit">
+      <img src="../IMG/Logo.png" alt="Logo TechFit">
     </div>
   
     <nav class="nav-buttons" id="nav-buttons">
-      <a href="/SiteAcademia/Index e Login/index.html">Início</a>
-      <a href="/SiteAcademia/Agendamento/agendamento.html">Agendamento</a>
-      <a href="/SiteAcademia/Unidades/Unidades.html">Unidades</a>
-      <a href="/SiteAcademia/Chat/chat.html">Chat</a>
-      <a href="/SiteAcademia/Admin/painel.html">Painel Admin</a>
-      <a href="/SiteAcademia/Nossa História/nos.html">Sobre Nós</a>
-      <a href="/SiteAcademia/Usuario/usuario.html" id="perfil-btn" style="display:none;">Perfil</a>
-      <a href="/SiteAcademia/login.html" id="login-btn">Login</a>
+      <a href="../index.html">Início</a>
+      <a href="../Agendamento/Agendamento.html">Agendamento</a>
+      <a href="../Unidades/Unidades.html">Unidades</a>
+      <a href="../Chat/chat.html">Chat</a>
+      <a href="../Admin/painel.php">Painel Admin</a>
+      <a href="../Nossa História/nos.html">Sobre Nós</a>
+      <a href="/Alunos/usuario.php" id="perfil-btn" style="display:none;">Perfil</a>
+      <a href="/Login/login.php" id="login-btn">Login</a>
     </nav>
   
     <div class="menu-icon" id="menu-icon">☰</div>
@@ -31,21 +31,21 @@
   
   <div class="side-menu" id="side-menu">
     <div class="close-btn" id="close-btn">✖</div>
-    <a href="/SiteAcademia/Index e Login/index.html">Início</a>
+    <a href="../index.html">Início</a>
 <header>
   <div class="logo">
-    <img src="/SiteAcademia/IMG/Logo.png" alt="Logo TechFit">
+    <img src="../IMG/Logo.png" alt="Logo TechFit">
   </div>
 
   <nav class="nav-buttons" id="nav-buttons">
     <a href="../index.html">Início</a>
-    <a href="/SiteAcademia/Agendamento/agendamento.html">Agendamento</a>
-    <a href="/SiteAcademia/Unidades/Unidades.html">Unidades</a>
-    <a href="/SiteAcademia/Chat/chat.html">Chat</a>
-    <a href="/SiteAcademia/Admin/painel.html">Painel Admin</a>
-    <a href="/SiteAcademia/Nossa História/nos.html">Sobre Nós</a>
-    <a href="/SiteAcademia/Usuario/usuario.html" id="perfil-side" style="display:none;">Perfil</a>
-    <a href="/SiteAcademia/login.html" id="login-side">Login</a>
+      <a href="../Agendamento/Agendamento.html">Agendamento</a>
+      <a href="../Unidades/Unidades.html">Unidades</a>
+      <a href="../Chat/chat.html">Chat</a>
+      <a href="../Admin/painel.php">Painel Admin</a>
+      <a href="../Nossa História/nos.html">Sobre Nós</a>
+      <a href="/Alunos/usuario.php" id="perfil-btn" style="display:none;">Perfil</a>
+      <a href="/Login/login.php" id="login-btn">Login</a>
   </div>
   </nav>
 
@@ -55,13 +55,13 @@
 <div class="side-menu" id="side-menu">
   <div class="close-btn" id="close-btn">✖</div>
   <a href="../index.html">Início</a>
-  <a href="/SiteAcademia/Agendamento/agendamento.html">Agendamento</a>
-  <a href="/SiteAcademia/Unidades/Unidades.html">Unidades</a>
-  <a href="/SiteAcademia/Chat/chat.html">Chat</a>
-  <a href="/SiteAcademia/Admin/painel.html">Painel Admin</a>
-  <a href="/SiteAcademia/Nossa História/nos.html">Sobre Nós</a>
-  <a href="/SiteAcademia/Usuario/usuario.php" id="perfil-side" style="display:none;">Perfil</a>
-  <a href="/SiteAcademia/Login/login.php" id="login-side">Login</a>
+      <a href="../Agendamento/Agendamento.html">Agendamento</a>
+      <a href="../Unidades/Unidades.html">Unidades</a>
+      <a href="../Chat/chat.html">Chat</a>
+      <a href="../Admin/painel.php">Painel Admin</a>
+      <a href="../Nossa História/nos.html">Sobre Nós</a>
+      <a href="/Alunos/usuario.php" id="perfil-btn" style="display:none;">Perfil</a>
+      <a href="/Login/login.php" id="login-btn">Login</a>
 </div>
 
 <div class="overlay" id="overlay"></div>
