--- a/SiteAcademia/Unidades/Unidades.html
+++ b/SiteAcademia/Unidades/Unidades.html
@@ -19,10 +19,11 @@
       <a href="../Agendamento/Agendamento.html">Agendamento</a>
       <a href="Unidades.html" aria-current="page">Unidades</a>
       <a href="../Chat/chat.html">Chat</a>
-      <a href="../Admin/painel.php">Painel Admin</a>
+      <!-- Admin link will be added dynamically for admin users -->
       <a href="../Nossa História/nos.html">Sobre Nós</a>
-      <a href="../Usuario/usuario.html" id="perfil-btn" style="display:none;">Perfil</a>
-      <a href="../Login/login.html" id="login-btn">Login</a>
+      <a href="../Alunos/usuario.php" id="perfil-btn" style="display:none;">Perfil</a>
+      <a href="../Login/login.php" id="login-btn">Login</a>
+      <span id="user-display" style="display:none;margin-left:12px;color:#111">Olá, <strong id="user-name"></strong></span>
     </nav>
 
     <div class="menu-icon" id="menu-icon">☰</div>
@@ -33,10 +34,11 @@
     <a href="../Agendamento/Agendamento.html">Agendamento</a>
     <a href="Unidades.html">Unidades</a>
     <a href="../Chat/chat.html">Chat</a>
-    <a href="../Admin/painel.php">Painel Admin</a>
+    <!-- Admin link will be added dynamically for admin users -->
     <a href="../Nossa História/nos.html">Sobre Nós</a>
-    <a href="../Usuario/usuario.html" id="perfil-side" style="display:none;">Perfil</a>
-    <a href="../Login/login.html" id="login-side">Login</a>
+    <a href="../Alunos/usuario.php" id="perfil-side" style="display:none;">Perfil</a>
+    <a href="../Login/login.php" id="login-side">Login</a>
+    <span id="user-display-side" style="display:none;margin-left:8px;color:#111">Olá, <strong id="user-name-side"></strong></span>
   </div>
 
   <!-- Conteúdo das Unidades -->
