--- a/SiteAcademia/Nossa História/nos.html
+++ b/SiteAcademia/Nossa História/nos.html
@@ -7,40 +7,36 @@
   <link rel="stylesheet" href="nos.css">
 </head>
 <body>
-  <header>
-    <div class="logo">
-      <img src="../IMG/Logo.png" alt="Logo TechFit">
-    </div>
+   <div class="overlay" id="overlay"></div>
 
-    <!-- 🧭 Navegação principal atualizada -->
-    <nav class="nav-buttons" id="nav-buttons">
-        <a href="../index.html">Início</a>
-      <a href="Agendamento.html">Agendamento</a>
-      <a href="../Unidades/Unidades.html">Unidades</a>
-      <a href="../Chat/chat.html">Chat</a>
-      <!-- Admin link will be added dynamically for admin users -->
-      <a href="../Nossa História/nos.html">Sobre Nós</a>
-      <a href="/Alunos/usuario.php" id="perfil-btn" style="display:none;">Perfil</a>
-      <a href="/Login/login.php" id="login-btn">Login</a>
-      <span id="user-display" style="display:none;margin-left:12px;color:#fff;">Olá, <strong id="user-name"></strong></span>
-    </nav>
-
-    <div class="menu-icon" id="menu-icon">☰</div>
-  </header>
-
-  <!-- 🪟 Menu lateral -->
-  <div class="side-menu" id="side-menu">
-    <div class="close-btn" id="close-btn">✖</div>
-     <a href="../index.html">Início</a>
-      <a href="Agendamento.html">Agendamento</a>
-      <a href="../Unidades/Unidades.html">Unidades</a>
-      <a href="../Chat/chat.html">Chat</a>
-      <!-- Admin link will be added dynamically for admin users -->
-      <a href="../Nossa História/nos.html">Sobre Nós</a>
-      <a href="/Alunos/usuario.php" id="perfil-btn" style="display:none;">Perfil</a>
-      <a href="/Login/login.php" id="login-btn">Login</a>
-      <span id="user-display-side" style="display:none;margin-left:8px;color:#111">Olá, <strong id="user-name-side"></strong></span>
+<header>
+  <div class="logo">
+    <img src="/SiteAcademia/IMG/Logo.png" alt="Logo TechFit">
   </div>
+
+  <nav class="nav-buttons" id="nav-buttons">
+    <a href="/SiteAcademia/Agendamento/Agendamento.html">Agendamento</a>
+    <a href="/SiteAcademia/Unidades/unidades.html">Unidades</a>
+    <a href="/SiteAcademia/Chat/chat.html">Chat</a>
+    <a href="/SiteAcademia/Admin/painel.php">Painel Admin</a>
+    <a href="/SiteAcademia/Nossa História/nos.html">Sobre Nós</a>
+    <a href="/SiteAcademia/Alunos/usuario.php" id="perfil-btn" style="display:none;">Perfil</a>
+    <a href="/SiteAcademia/Login/login.php" id="login-btn">Login</a>
+  </nav>
+
+  <div class="menu-icon" id="menu-icon">☰</div>
+</header>
+
+<div class="side-menu" id="side-menu">
+  <div class="close-btn" id="close-btn">✖</div>
+  <a href="/SiteAcademia/Agendamento/Agendamento.html">Agendamento</a>
+  <a href="/SiteAcademia/Unidades/unidades.html">Unidades</a>
+  <a href="/SiteAcademia/Chat/chat.html">Chat</a>
+  <a href="/SiteAcademia/Admin/painel.php">Painel Admin</a>
+  <a href="/SiteAcademia/Nossa História/nos.html">Sobre Nós</a>
+  <a href="/SiteAcademia/Alunos/usuario.php" id="perfil-side" style="display:none;">Perfil</a>
+  <a href="/SiteAcademia/Login/login.php" id="login-side">Login</a>
+</div>
 
   <main class="history-container">
     <h1>Nossa História:</h1>
