--- a/SiteAcademia/index.html
+++ b/SiteAcademia/index.html
@@ -8,44 +8,36 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="overlay" id="overlay"></div>
+    <div class="overlay" id="overlay"></div>
 
-  <header>
-    <div class="logo">
-      <img src="IMG/Logo.png" alt="Logo TechFit">
-    </div>
+<header>
+  <div class="logo">
+    <img src="/SiteAcademia/IMG/Logo.png" alt="Logo TechFit">
+  </div>
 
-    <nav class="nav-buttons" id="nav-buttons">  
-      <a href="Agendamento/Agendamento.html">Agendamento</a>
-      <a href="Unidades/Unidades.html">Unidades</a>
-      <a href="Chat/chat.html">Chat</a>
-      <a href="Nossa História/nos.html">Sobre Nós</a>
+  <nav class="nav-buttons" id="nav-buttons">
+    <a href="/SiteAcademia/Agendamento/Agendamento.html">Agendamento</a>
+    <a href="/SiteAcademia/Unidades/unidades.html">Unidades</a>
+    <a href="/SiteAcademia/Chat/chat.html">Chat</a>
+    <a href="/SiteAcademia/Admin/painel.php">Painel Admin</a>
+    <a href="/SiteAcademia/Nossa História/nos.html">Sobre Nós</a>
+    <a href="/SiteAcademia/Alunos/usuario.php" id="perfil-btn" style="display:none;">Perfil</a>
+    <a href="/SiteAcademia/Login/login.php" id="login-btn">Login</a>
+  </nav>
 
-      <a href="Alunos/usuario.php" id="perfil-btn" style="display:none;">Perfil</a>
-      <a href="Login/login.php" id="login-btn">Login</a>
+  <div class="menu-icon" id="menu-icon">☰</div>
+</header>
 
-      <!-- ADICIONADO -->
-      <a href="#" id="logout-btn" style="display:none;">Logout</a>
-
-      <span id="user-display" style="display:none;margin-left:12px;color:#fff;">
-        Olá, <strong id="user-name"></strong>
-      </span>
-    </nav>
-
-    <div class="menu-icon" id="menu-icon">☰</div>
-  </header>
-
-  <div class="side-menu" id="side-menu">
-    <div class="close-btn" id="close-btn">✖</div>
-
-    <a href="Agendamento/Agendamento.html">Agendamento</a>
-    <a href="Unidades/Unidades.html">Unidades</a>
-    <a href="Chat/chat.html">Chat</a>
-    <a href="Nossa História/nos.html">Sobre Nós</a>
-
-    <a href="Alunos/usuario.php" id="perfil-side" style="display:none;">Perfil</a>
-    <a href="Login/login.php" id="login-side">Login</a>
-
+<div class="side-menu" id="side-menu">
+  <div class="close-btn" id="close-btn">✖</div>
+  <a href="/SiteAcademia/Agendamento/Agendamento.html">Agendamento</a>
+  <a href="/SiteAcademia/Unidades/unidades.html">Unidades</a>
+  <a href="/SiteAcademia/Chat/chat.html">Chat</a>
+  <a href="/SiteAcademia/Admin/painel.php">Painel Admin</a>
+  <a href="/SiteAcademia/Nossa História/nos.html">Sobre Nós</a>
+  <a href="/SiteAcademia/Alunos/usuario.php" id="perfil-side" style="display:none;">Perfil</a>
+  <a href="/SiteAcademia/Login/login.php" id="login-side">Login</a>
+</div>
     <!-- ADICIONADO -->
     <a href="#" id="logout-side" style="display:none;">Logout</a>
 
