--- a/SiteAcademia/index.html
+++ b/SiteAcademia/index.html
@@ -12,17 +12,17 @@
 
 <header>
   <div class="logo">
-    <img src="/SiteAcademia/IMG/Logo.png" alt="Logo TechFit">
+    <img src="IMG/Logo.png" alt="Logo TechFit">
   </div>
 
   <nav class="nav-buttons" id="nav-buttons">
-    <a href="/SiteAcademia/Agendamento/Agendamento.html">Agendamento</a>
-    <a href="/SiteAcademia/Unidades/unidades.html">Unidades</a>
-    <a href="/SiteAcademia/Chat/chat.html">Chat</a>
-    <a href="/SiteAcademia/Admin/painel.php">Painel Admin</a>
-    <a href="/SiteAcademia/Nossa História/nos.html">Sobre Nós</a>
-    <a href="/SiteAcademia/Alunos/usuario.php" id="perfil-btn" style="display:none;">Perfil</a>
-    <a href="/SiteAcademia/Login/login.php" id="login-btn">Login</a>
+    <a href="Agendamento/Agendamento.html">Agendamento</a>
+    <a href="Unidades/Unidades.html">Unidades</a>
+    <a href="Chat/chat.html">Chat</a>
+    <a href="Admin/painel.php">Painel Admin</a>
+    <a href="Nossa História/nos.html">Sobre Nós</a>
+    <a href="Alunos/usuario.php" id="perfil-btn" style="display:none;">Perfil</a>
+    <a href="Login/login.php" id="login-btn">Login</a>
   </nav>
 
   <div class="menu-icon" id="menu-icon">☰</div>
@@ -30,13 +30,13 @@
 
 <div class="side-menu" id="side-menu">
   <div class="close-btn" id="close-btn">✖</div>
-  <a href="/SiteAcademia/Agendamento/Agendamento.html">Agendamento</a>
-  <a href="/SiteAcademia/Unidades/unidades.html">Unidades</a>
-  <a href="/SiteAcademia/Chat/chat.html">Chat</a>
-  <a href="/SiteAcademia/Admin/painel.php">Painel Admin</a>
-  <a href="/SiteAcademia/Nossa História/nos.html">Sobre Nós</a>
-  <a href="/SiteAcademia/Alunos/usuario.php" id="perfil-side" style="display:none;">Perfil</a>
-  <a href="/SiteAcademia/Login/login.php" id="login-side">Login</a>
+  <a href="Agendamento/Agendamento.html">Agendamento</a>
+  <a href="Unidades/Unidades.html">Unidades</a>
+  <a href="Chat/chat.html">Chat</a>
+  <a href="Admin/painel.php">Painel Admin</a>
+  <a href="Nossa História/nos.html">Sobre Nós</a>
+  <a href="Alunos/usuario.php" id="perfil-side" style="display:none;">Perfil</a>
+  <a href="Login/login.php" id="login-side">Login</a>
 </div>
     <!-- ADICIONADO -->
     <a href="#" id="logout-side" style="display:none;">Logout</a>
@@ -55,7 +55,7 @@
       <h2>Plano Black</h2>
       <p>Treine em qualquer unidade TechFit do Brasil e América Latina.</p>
       <p class="preco">A partir de <strong>R$ 149,90</strong></p>
-      <a href="/PAGAMENTOS/pagamentos.php" class="btn brilho">Contratar agora</a>
+      <a href="PAGAMENTOS/pagamentos.php" class="btn brilho">Contratar agora</a>
       <ul>
         <li>✔ Acesso total</li>
         <li>✔ Leve 5 amigos/mês</li>
@@ -68,7 +68,7 @@
       <h2>Plano Fit</h2>
       <p>Plano econômico com acesso livre à sua unidade preferida.</p>
       <p class="preco">A partir de <strong>R$ 99,90</strong></p>
-      <a href="/PAGAMENTOS/pagamentos.php" class="btn brilho">Contratar agora</a>
+      <a href="PAGAMENTOS/pagamentos.php" class="btn brilho">Contratar agora</a>
       <ul>
         <li>✔ Acesso à unidade</li>
         <li>✘ Levar amigos</li>
@@ -81,7 +81,7 @@
       <h2>Plano Tech</h2>
       <p>Treine com conforto e liberdade, ideal para rotina dinâmica.</p>
       <p class="preco">A partir de <strong>R$ 119,90</strong></p>
-      <a href="/PAGAMENTOS/pagamentos.php" class="btn brilho">Contratar agora</a>
+      <a href="PAGAMENTOS/pagamentos.php" class="btn brilho">Contratar agora</a>
       <ul>
         <li>✔ Acesso a todas as academias</li>
         <li>✘ Levar amigos</li>
