--- a/SiteAcademia/Agendamento/Agendamento.html
+++ b/SiteAcademia/Agendamento/Agendamento.html
@@ -16,6 +16,7 @@
   </div>
 
   <nav class="nav-buttons" id="nav-buttons">
+    <a href="../index.html">Início</a>
     <a href="../Agendamento/Agendamento.html">Agendamento</a>
     <a href="../Unidades/unidades.html">Unidades</a>
     <a href="../Chat/chat.html">Chat</a>
@@ -30,6 +31,7 @@
 
 <div class="side-menu" id="side-menu">
   <div class="close-btn" id="close-btn">✖</div>
+  <a href="../index.html">Início</a>
   <a href="../Agendamento/Agendamento.html">Agendamento</a>
   <a href="../Unidades/unidades.html">Unidades</a>
   <a href="../Chat/chat.html">Chat</a>
@@ -90,6 +92,7 @@
     </div>
 
     <button id="agendar-btn">Agendar</button>
+    <a href="../index.html" class="btn-voltar-inicio">← Voltar ao Início</a>
   </div>
 
   <footer class="fade-in-up">
